preping for merge

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
       </div>
     </header>
   </head>
-  <body>
+  <body id="aboutbody">
     <h1 id="communityofartists">A Community of Artists</h1>
     <div id="aboutbodydiv">
       <div id="aboutuspara">
@@ -64,8 +64,8 @@
         </tbody>
       </table>
     </div>
+    </body>
     <footer>
       <p>Copyright 2017, Bent Creek Ceramics</p>
     </footer>
-  </body>
 </html>
