--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
     </header>
   </head>
-  <body>
+  <body id="homebody">
     <div id="indexbody">
       <h1 id="bentcreek">Bent Creek Ceramics</h1>
       <h2 id="artnature">Where art meets nature</h2>
@@ -31,8 +31,8 @@
         <div id="div7"><div id="textdiv7"></div></div>
       </div>
     </div>
+    </body>
     <footer>
       <p>Copyright 2017, Bent Creek Ceramics</p>
     </footer>
-  </body>
 </html>
