--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
       <div id="fix">
       <a id="logo" href="index.html"><img id="logoimg" src="images/bent-creek-logo.png"></a>
       <nav id="main-navigation">
-        <a href="index.html" class="activelink">HOME</a>
-        <a href="about.html">ABOUT</a>
-        <a href="newsletter.html">NEWSLETTER</a>
+        <a class="index" class="activelink">HOME</a>
+        <a class="about">ABOUT</a>
+        <a class="newsletter">NEWSLETTER</a>
       </nav>
       </div>
     </header>
   </head>
-  <body id="homebody">
+<div class="homebody">
+  <body>
     <div id="indexbody">
       <h1 id="bentcreek">Bent Creek Ceramics</h1>
       <h2 id="artnature">Where art meets nature</h2>
@@ -32,7 +33,92 @@
       </div>
     </div>
     </body>
+  </div><!--CLOSES HOME BODY-->
+  <div class="aboutbody">
+    <body>
+      <h1 id="communityofartists">A Community of Artists</h1>
+      <div id="aboutbodydiv">
+        <div id="aboutuspara">
+          <img src="images/birdhouse.jpg" alt="Birdhouse">
+          <p class="aboutparafont">Our studio, established in 1989, has been providing local artists with a <a href="#Facilities">dedicated evironment</a> for creativity for 20+ years. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        </div>
+        <p class="aboutparafont" id="ourmission">"Our mission is to provide people with beautiful, functional items which enhance lives."<br>-Jenn Wilson (Founder)</p>
+        <h2>History</h2>
+        <p class="aboutparafont">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+        <div id="roombackground">
+          <h1 id="roomtogrow">Room to Grow</h2>
+        </div>
+        <h2 id="Facilities">Facilities</h2>
+        <div id="alignsides">
+          <p class="aboutparafont">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.</p>
+          <div id="aboutshelf">
+            <img src="images/background-1.jpg" alt="Studio Shelf Space">
+            <p>Every member has access to shelf space and all of the studio's shared equipment.</p>
+          </div>
+        </div>
+        <h2>Monthly Plans</h2>
+        <table>
+          <thead>
+            <tr>
+              <td>Plan</td>
+              <td>Price</td>
+              <td>Access</td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr class="tablecolor">
+              <td>Desk Only</td>
+              <td>$50/mo.</td>
+              <td>Business Hours + Weekly Kiln Access</td>
+            </tr>
+            <tr>
+              <td>Desk + Storage</td>
+              <td>$100/mo.</td>
+              <td>Business Hours + Weekly Kiln Access</td>
+            </tr>
+            <tr class="tablecolor">
+              <td>Unlimited</td>
+              <td>$150/mo.</td>
+              <td>Unlimited access</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      </body>
+    </div><!--CLOSES ABOUT BODY-->
+    <div class="newsletterbody">
+      <body>
+        <div id="newslettercontainer">
+          <h1>Sign Up for Our Weekly Newsletter</h1>
+          <h2>Stay up to date with events, activities, news and specials.</h2>
+          <input type="text" id="nameInput" name="nameInput" placeholder="Name">
+          <input type="email" id="emailInput" name="emailInput" placeholder="Email">
+          <div id="submitcontainer">
+            <button type="submit" id="signupButton">Submit</button>
+          </div>
+        </div>
+        </body>
+      </div><!--CLOSES NEWS LETTER BODY-->
     <footer>
       <p>Copyright 2017, Bent Creek Ceramics</p>
     </footer>
+    <script src='https://code.jquery.com/jquery-3.1.0.min.js'></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src='main.js'></script>
+    <script type="text/javascript">
+      var nameInput = document.getElementById('nameInput');
+      var emailInput = document.getElementById('emailInput');
+      var signupButton = document.getElementById('signupButton');
+      signupButton.addEventListener('click', function(e) {
+        var nameVal = nameInput.value;
+        var emailVal = emailInput.value;
+        if (nameVal && emailVal) {
+          alert('Thanks for signing up, ' + nameVal + '. Newsletters will be sent to ' + emailVal);
+            nameInput.value = "";
+            emailInput.value = "";
+        } else {
+          alert('We would love for you to sign up, please provide both your name and email address.');
+        }
+      });
+      </script>
 </html>
