--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <link href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700|Roboto:300,300i,400,400i" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
-    <title class="title">Bent Creek Ceramics</title>
+    <title>Bent Creek Ceramics</title>
+    <title>Bent Creek Ceramics - About</title>
+    <title>Bent Creek Ceramics - Newsletter</title>
     <header>
       <div id="fix">
       <a id="logo" href="index.html"><img id="logoimg" src="images/bent-creek-logo.png"></a>
