--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <footer>
       <p>Copyright 2017, Bent Creek Ceramics</p>
     </footer>
-    <script src='https://code.jquery.com/jquery-3.1.0.min.js'></script>
+    <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src='main.js'></script>
+    <script src="main.js"></script>
 </html>
